[package]
name = "chargrid-roguelike-tutorial-2020"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chargrid_graphical = "0.7"
chargrid = "0.4"
coord_2d = "0.3"
direction = "0.18"
entity_table = "0.2"
grid_2d = "0.15"
rand = "0.8"
rand_isaac = "0.3"
rgb24 = "0.3"
shadowcast = "0.8"
spatial_table = "0.3"
