[package]
name = "chargrid-roguelike-tutorial-2020"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chargrid = { version = "0.4", features = ["serialize"] }
chargrid_graphical = "0.7"
coord_2d = { version = "0.3", features = ["serialize"] }
direction = { version = "0.18", features = ["rand", "serialize"] }
entity_table = { version = "0.2", features = ["serialize"] }
grid_2d = { version = "0.15", features = ["serialize"] }
grid_search_cardinal = { version = "0.3", features = ["serialize"] }
line_2d = { version = "0.5", features = ["serialize"] }
meap = "0.4"
rand = "0.8"
rand_isaac = { version = "0.3", features = ["serde1"] }
rgb24 = { version = "0.3", features = ["serialize"] }
serde = { version = "1.0", features = ["serde_derive"] }
shadowcast = { version = "0.8", features = ["serialize"] }
spatial_table = { version = "0.3", features = ["serialize"] }
